# chartbox

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  makefile
data/block-island/: boundary.develop.geojson  boundary.polygon.geojson  boundary.simple.geojson
include/: chart-box.hpp
src/geometry/: index.hpp  index.inl  index.test.cpp  view.hpp  view.test.cpp
src/lib/chart-box/: CMakeLists.txt  chart-box.cpp  chart-box.hpp  chart-frame-mapping.cpp  chart-frame-mapping.hpp  chart-layer-interface.hpp  chart-layer-interface.inl  example.test.cpp
src/lib/chart-box/frame/: bound-box.hpp  frame-mapping.cpp  frame-mapping.hpp  frame.test.cpp  location2en.hpp  location2ll.hpp  location2xy.hpp  location3xyz.hpp
src/lib/chart-box/geometry/: bound-box.hpp  bounds.test.cpp  ego-location.hpp  frame-mapping.cpp  frame-mapping.hpp  frame.test.cpp  global-location.hpp  interpolate.hpp  interpolate.inl  local-location.hpp  path.hpp  polygon.hpp  polygon.inl  polygon.test.cpp  sample.hpp  utm-location.hpp  xy-location.hpp
src/lib/geometry/: CMakeLists.txt  bound-box.hpp  frame-mapping.hpp  frame.test.cpp  global-location.hpp  local-location.hpp  path.cpp  path.hpp  path.test.cpp  polygon.cpp  polygon.hpp  polygon.inl  polygon.test.cpp  utm-location.hpp  xy-location.hpp
src/lib/io/: CMakeLists.txt  base-loader.hpp  base-writer.hpp  boundary-loader.hpp  boundary-loader.inl  cell-cache-generated.h  cell-cache.fbs  chart-base-loader.hpp  chart-base-writer.hpp  chart-debug-loader.hpp  chart-debug-writer.hpp  chart-geojson-loader.hpp  chart-geojson-loader.inl  chart-png-writer.hpp  chart-png-writer.inl  chart-shapefile-loader.hpp  chart-shapefile-loader.inl  contour-loader.hpp  contour-loader.inl  debug-loader.hpp  debug-writer.hpp  flatbuffer-load.cpp  flatbuffer-loader.hpp  flatbuffer-loader.inl  flatbuffer-save.cpp  flatbuffer-saver.inl  flatbuffer-writer.hpp  flatbuffer-writer.inl  flatbuffer.hpp  geojson-boundary-loader.inl  geojson-contour-loader.inl  geojson-loader.hpp  geojson-loader.inl  geojson.cpp  geojson.hpp  png-saver.inl  png-writer.hpp  png-writer.inl  png.hpp
src/lib/io/flatbuffer/: CMakeLists.txt  cell-cache-generated.h  flatbuffer.cpp  flatbuffer.hpp  flatbuffer.inl  tile-cache-generated.hpp  tile-cache.fbs
src/lib/io/geojson/: CMakeLists.txt  boundary.inl  contour.inl  geojson.cpp  geojson.hpp
src/lib/io/png/: CMakeLists.txt  png.cpp  png.hpp  png.inl
src/lib/layer/: CMakeLists.txt  grid-index.hpp  grid-index.test.cpp  layer-interface.hpp  layer-interface.inl
src/lib/layer/dynamic-grid/: CMakeLists.txt  dynamic-grid-layer.cpp  dynamic-grid-layer.hpp  dynamic-grid-layer.test.cpp
src/lib/layer/fixed-grid/: CMakeLists.txt  fixed-grid.cpp  fixed-grid.hpp  fixed-grid.inl
src/lib/layer/quad-tree/: CMakeLists.txt  leaf-node.cpp  leaf-node.hpp  leaf-node.test.cpp  quad-node.cpp  quad-node.hpp  quad-node.test.cpp  quad-tree-layer.cpp  quad-tree-layer.hpp  quad-tree-layer.test.cpp
src/lib/layer/rolling-grid/: CMakeLists.txt  rolling-grid-index.hpp  rolling-grid-layer.cpp  rolling-grid-layer.hpp  rolling-grid-sector.hpp  rolling-grid.test.cpp
src/lib/layer/simple-grid/: CMakeLists.txt  simple-grid-layer.cpp  simple-grid-layer.hpp  simple-grid-layer.inl  simple-grid.test.cpp
src/lib/layer/static-grid/: CMakeLists.txt  static-grid-layer.cpp  static-grid-layer.hpp  static-grid.cpp  static-grid.hpp  static-grid.inl  static-grid.test.cpp
src/lib/layer/view/: CMakeLists.txt  view.hpp  view.inl
src/lib/search/: CMakeLists.txt  a-star.hpp  a-star.inl  a-star.test.cpp  rrt-star.hpp  rrt-star.inl  rrt-star.test.cpp
src/lib/search/a-star/: CMakeLists.txt  a-star-search.hpp  a-star-search.inl  a-star-search.test.cpp
src/node/tile/: tile_node.hpp
src/process/merge/: CMakeLists.txt  main.cpp
src/process/profile/: main.cpp
src/process/sandbox/: CMakeLists.txt  main.cpp
